enigma de imgs resuelto

--- a/layout.html
+++ b/layout.html
@@ -10,7 +10,14 @@
     <section class="container">
         <header>Header</header>
         <aside>aside</aside>
-        <main>main</main>
+        <main>
+            <figure>
+                <img src="./img/lobo.jpg" alt="lobo">
+            </figure>
+            <figure>
+                <img src="./img/luna.jpg" alt="luna">
+            </figure>
+        </main>
         <footer>footer</footer>
     </section>
 </body>
